--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "faker": "^5.5.3",
-    "react": "^18.2.0",
+    "fontawesome": "^5.6.3",
+    "react": "^18.0.0-rc.3",
     "react-colorful": "^5.6.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.0.0-rc.3",
     "react-fontawesome": "^1.7.1",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.11",
